# zellij-mcp-lite

./: LICENSE  README.md  pyproject.toml  server.py
